# General_Gridded_Feature_Extraction

./: .gitignore  Dev_Plan.md  README.md  pyproject.toml
examples/: basic_usage.py
notebooks/: 01_feature_extraction_basics.ipynb  02_antimeridian.ipynb  03_artificial_swaths.ipynb  04_swath_edge_semantics.ipynb  README.md
src/gridfeatures/: __init__.py  config.py  detection.py  feature.py  grid.py  io.py  runner.py  stats.py  swath.py
tests/: conftest.py  test_detection.py  test_dominant_swath.py  test_geometry.py  test_runner.py  test_stats.py  test_swath.py
